2010-12-27  Per Bothner  <per@bothner.com>

	* num-test.scm: New R6RS tests.

	* num-test.scm: One expected failure no longer fails.

2010-12-26  Per Bothner  <per@bothner.com>

	* annotations1.scm: Add some method anc class annotations.
	* annotations1-bytecode.expected: Update accordingly.

	* bad-annotations2.scm: New test for catching errors.
	* bad-annotations2.expected: Expected error messages from above.
	* Makefile.am: Update acordingly.

2010-12-24  Per Bothner  <per@bothner.com>

	* annotations1.scm: New test for testing annotations.
	* MyAnnotType.java: Provide annotation type used by annotations1.scm.
	* annotations1-bytecode.expected: Expected bytecode dump output.
	* Makefile.am: Update accordingly.

	* Makefile.am (CPJAVA, KPKAWA, LIST_CODE_SIZE): New macros
	to reduce repetition and verbosity.

2010-11-26  Per Bothner  <per@bothner.com>

	* lib-test.scm: New tests for symbol constructor function.

2010-11-19  Per Bothner  <per@bothner.com>

	* lib-test.scm: Add a bunch of SRFI-41 (streams) tests.

2010-11-04  Per Bothner  <per@bothner.com>

	* module2.scm: Add define-variable to avoid warning.
	* module3.scm: Add with-compile-options to suppress warning,

	* num-test.scm: Add a test from R6RS for remainder.

2010-10-29  Per Bothner  <per@bothner.com>

	* meteor.scm (bad-region): Instead of passing in a 1-element array,
	pass and return a single int primitive.
	* meteor.scm (bad-region): Don't run the program 65 times, for the
	steady-state approximation -the test-suite runner doesn't support that.

2010-10-28  Per Bothner  <per@bothner.com>

	* meteor.scm: Replace many 2d array by flattened 1d arrays.
	(do-decrementing): New convenience macro.

	* chameneosredux.scm (Color): Use new define-enum feature.

	* classes1.scm: Make <IdClass1> and <IdClass2> explicitly static.

2010-10-27  Per Bothner  <per@bothner.com>

	* meteor.scm: Use remainder instead of modulo, since former can
	be optimized to single Java instruction.
