@@ -1,0 +1,38 @@
+<bib>
+  <book year="1994">
+    <title>TCP/IP Illustrated</title>
+    <author><last>Stevens</last><first>W.</first></author>
+    <publisher>Addison-Wesley</publisher>
+    <price>72.55</price>
+  </book>
+  <book year="1992">
+    <title>Advanced Programming in the Unix environment</title>
+    <author><last>Stevens</last><first>W.</first></author>
+    <publisher>Addison-Wesley</publisher>
+    <price>72.55</price>
+  </book>
+  <book year="2000">
+    <title>Data on the Web</title>
+    <author><last>Abiteboul</last><first>Serge</first></author>
+    <author><last>Buneman</last><first>Peter</first></author>
+    <author><last>Suciu</last><first>Dan</first></author>
+    <publisher>Morgan Kaufmann Publishers</publisher>
+    <price>43.95</price>
+  </book>
+  <book year="1999">
+    <title>The Economics of Technology and Content for Digital TV</title>
+    <editor>
+      <last>Gerbarg</last>
+      <first>Darcy</first>
+      <affiliation>CITI</affiliation>
+    </editor>
+    <publisher>Kluwer Academic Publishers</publisher>
+    <price>142.94</price>
+  </book>
+  <book year="2006">
+    <title>JavaScript: The Definitive Guide (5th edtion)</title>
+    <author><last>Flanagan</last><first>David</first></author>
+    <publisher>O'Reilly</publisher>
+    <price>49.99</price>
+  </book>
+</bib>
